fix header h1 margin on mobile

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -86,6 +86,7 @@
             order:2;
             padding-top: 32px;
             padding: 10%;
+            margin-top: 0%;
         }
 
         .swiper-right{
